# mel-spectrogram-tutorial

./: .gitignore  01_waveform_and_frequency.py  02_stft_and_spectrogram.py  03_mel_scale.py  04_mel_spectrogram_pipeline.py  05_cnn_preprocessing.py  06_parameter_experiments.py  README.md  config.yaml  pyproject.toml  requirements.txt  utils.py
assets/: .gitkeep
outputs/: .gitkeep
